--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "*",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
     },
     "config": {
         "allow-plugins": {
