--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/orm": "^2.15",
         "endroid/qr-code-bundle": "^4.3",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.29",
         "phpstan/phpdoc-parser": "^1.22",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "6.0.*",
