--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,7 +34,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/$, roles: ROLE_ADMIN }
+         - { path: ^/gestion/, roles: ROLE_ADMIN }
+         - { path: ^/parametres/, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
     role_hierarchy:
