fix: export excel utilisateurs

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,7 @@ security:
     access_control:
          - { path: ^/gestion/, roles: ROLE_ADMIN }
          - { path: ^/parametres/, roles: ROLE_ADMIN }
+         - { path: ^/accueil, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
     role_hierarchy:
