--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,7 +9,8 @@ doctrine:
         report_fields_where_declared: true
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
-        auto_mapping: true
+        controller_resolver:
+            auto_mapping: true
         mappings:
             App:
                 is_bundle: false
