--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,13 +1,14 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-
+        use_savepoints: true
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '15'
     orm:
         report_fields_where_declared: true
         auto_generate_proxy_classes: true
+        enable_lazy_ghost_objects: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         controller_resolver:
             auto_mapping: true
