--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,7 +4,7 @@ framework:
     #csrf_protection: true
     http_method_override: false
     default_locale: 'fr'
-    handle_all_throwables: false
+    handle_all_throwables: true
     annotations:
         enabled: false
 
