fix: don't update file for update notifications update: add css files in projects without link for the web

--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,8 @@
 
 .idea
 .DS_Store
-prod.pl
 
 ###> symfony/asset-mapper ###
-/public/assets/
+#/public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
